# Face-Detection-Cpp-Cuda-OpenCV-Example

./: CMakeLists.txt  README.md  buildOpencv.sh
include/: face_detector_cuda.hpp  streamer.hpp
src/: face_detector_cuda.cpp  main.cpp  streamer.cpp
